--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,9 @@
 body{
     background-color: black;
+    margin: 0%;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../assets/57242bae74368fdfe09e131becb3a389.jpg);
 }
 div{
     background-color: rgba(0, 0, 0, 0.9);
@@ -13,6 +17,12 @@ div{
 }
 p{
     color: black;
+}
+img{
+    display: flex;
+    border: none;
+    
+    
 }
 input{
     padding: 15px;
@@ -52,6 +62,10 @@ span{
   }
 
 @media (min-width: 375px) and (max-width: 414px){
+    body{
+        background-color: black;
+        margin: 0%;
+    }
     div{
         background-color: rgb(0, 50, 94);
     }
@@ -64,5 +78,14 @@ span{
     p{
         color: rgb(255, 255, 255);
     }
+    img{
+        display: flex;
+        border: none;
+        width: 414px;
+        height: 844px;
+        background-image: url(../assets/57242bae74368fdfe09e131becb3a389.jpg);
+        
+    }
+   
     
 }
