--- a/styles/page-1.css
+++ b/styles/page-1.css
@@ -12,49 +12,26 @@ header{
     color: rgb(255, 255, 255); 
     display: grid;
     justify-content: space-around;
-    margin-top: 0%;
+    margin-top: 0;
 }
 
-h1,h2{
-    display: grid;
-   justify-content: center;
-   height: 50%;
-   
-
-}
-p{
+.container{
+    margin-top: 45px;
     
-    font-family: "Madimi One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    display: grid;
-    justify-content: center;
-}
-.pikachu{
-    display: grid;
     
 }
-button{
-        width: 100%;
-        height: 50%; 
-        background-color: rgb(190, 0, 32);
-        border: none;
-        padding: 15px;
-        border-radius: 15px;
-        color: white;
-        font-size: 15px;
-        color: aliceblue;
-        
+input{
+    padding: 10px;
+    border-radius: 15px;
+    outline: none;
+    font-size: 15px;
 }
-
-button:hover{
-       background-color: rgb(0, 0, 0);
-        cursor: pointer;
-}
-
-.topo{
-    color: rgb(0, 0, 0);
-}
-.ash{
-    color: rgb(0, 0, 0);
-}
+button {
+    padding: 15px;
+    height: 50px;
+    background-color: #2b75bb;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 15px;
+  }
+ 
